--- a/video-express/extension.yaml
+++ b/video-express/extension.yaml
@@ -1,4 +1,4 @@
-# Copyright 2021 Vonage
+# Copyright 2022 Vonage
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -51,7 +51,7 @@ resources:
     description: >-
       Creates a Vonage Video Express room, a sessionId, and stores them along with the API Key in Firestore.
     properties:
-      location: ${LOCATION}
+      location: ${param:LOCATION}
       runtime: nodejs14
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.create
@@ -62,7 +62,7 @@ resources:
     description: >-
       Generates token for user to be able to join the room.
     properties:
-      location: ${LOCATION}
+      location: ${param:LOCATION}
       runtime: nodejs14
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.create
@@ -73,7 +73,7 @@ resources:
     description: >-
       Serves a demo application.
     properties:
-      location: ${LOCATION}
+      location: ${param:LOCATION}
       runtime: nodejs14
       httpsTrigger: {}
 
@@ -109,6 +109,8 @@ params:
         value: europe-west3
       - label: Zurich (europe-west6)
         value: europe-west6
+      - label: Taiwan (asia-east1)
+        value: asia-east1
       - label: Hong Kong (asia-east2)
         value: asia-east2
       - label: Tokyo (asia-northeast1)
@@ -119,6 +121,8 @@ params:
         value: asia-northeast3
       - label: Mumbai (asia-south1)
         value: asia-south1
+      - label: Singapore (asia-southeast1)
+        value: asia-southeast1
       - label: Jakarta (asia-southeast2)
         value: asia-southeast2
       - label: Montreal (northamerica-northeast1)
