--- a/messages/extension.yaml
+++ b/messages/extension.yaml
@@ -4,8 +4,9 @@
 # Identifier for your extension
 # TODO: Replace this with an descriptive name for your extension.
 name: firebase-vonage-messages
-version: 1.0.0  # Follow semver versioning
+version: 1.0.1  # Follow semver versioning
 specVersion: v1beta  # Version of the Firebase Extensions specification
+icon: https://github.com/Vonage/vonage-firebase-extensions/blob/main/messages/Vonage_Extension_Messages.png?raw=true
 
 # Friendly display name for your extension (~3-5 words)
 displayName: Vonage Messages API
