--- a/messages/extension.yaml
+++ b/messages/extension.yaml
@@ -6,7 +6,7 @@
 name: firebase-vonage-messages
 version: 1.0.1  # Follow semver versioning
 specVersion: v1beta  # Version of the Firebase Extensions specification
-icon: https://github.com/Vonage/vonage-firebase-extensions/blob/main/messages/Vonage_Extension_Messages.png?raw=true
+icon: Vonage_Extension_Messages.png
 
 # Friendly display name for your extension (~3-5 words)
 displayName: Vonage Messages API
