--- a/video-express/functions/package.json
+++ b/video-express/functions/package.json
@@ -13,9 +13,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@vonage/server-sdk": "^3.12.2",
     "firebase-admin": "^11.11.0",
-    "firebase-functions": "^3.18.0",
-    "opentok": "^2.12.1"
+    "firebase-functions": "^3.18.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
